--- a/css/fonts.css
+++ b/css/fonts.css
@@ -68,7 +68,7 @@ h3 {
 .subhead {
     text-decoration: none;
     font-style: normal;
-    colour: #B1B1B1;
+    color: #B1B1B1;
     font-family: "givonic-semibold", Arial, sans-serif;
     font-size: 14px;
 }
@@ -88,11 +88,10 @@ p {
     font-size: 16px;  
 }
 
-
 .food-description {
     text-decoration: none;
     font-style: normal;
-    color: white;
+    color: black;
     font-family: "givonic-light", Arial, sans-serif;
     font-size: 16px;
 }
