--- a/css/button.css
+++ b/css/button.css
@@ -11,6 +11,19 @@
     height: 47px;
 }
 
+.subhead-arrow {
+
+}
+
+.white-brandlogo {
+
+}
+
+.black-brandlogo {
+    
+}
+
+
 /* General buttons */
 .instagram-button {
     width: 160px;
