--- a/css/button.css
+++ b/css/button.css
@@ -63,6 +63,12 @@
     height: 47px;
 }
 
+.filter {
+    width: 52px;
+    height: 19px;
+}
+
+
 /* Reservation Page */
 .grey-find-a-table{
     width: 184px;
