31st may - 2.41am

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -115,6 +115,15 @@ p {
     line-height: 120%;
 }
 
+.p-center{
+
+}
+
+.p-left{
+  
+}
+
+
 .food-description {
     text-decoration: none;
     font-style: normal;
