--- a/css/layout.css
+++ b/css/layout.css
@@ -28,6 +28,28 @@ content{
   gap: 16px;
 }
 
+/* 8 Grid System (mostly for contents) */
+
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 350px;
+  margin-right: 350px;
+}
+
+.grid-item {
+  width: calc((100% - 700px) / 8); 
+  margin-left: 16px;
+  margin-right: 16px;
+  background-color: lightblue;
+  height: vh;
+  box-sizing: border-box;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 #large-item {
   grid-column-start: 1;
   grid-column-end: 9;
@@ -51,33 +73,8 @@ content{
 }
 
 
-/* Grid System */
-.grid-container {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: 350px;
-  margin-right: 350px;
-}
-
-.grid-item {
-  width: calc((100% - 700px) / 8); 
-  margin-left: 16px;
-  margin-right: 16px;
-  background-color: lightblue;
-  height: vh;
-  box-sizing: border-box;
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.grid-system {
-  display: grid;
-}
-
-
 /* Item Grids - 2 columns per item */
+
 #item-grid-1 {
   grid-column-start: 1;
   grid-column-end: 3;
@@ -102,20 +99,23 @@ content{
   margin: 0;
 }
 
+
 /* Navigation Bar*/
+
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0rem;
+    height: 102px;
+    padding: 0;
     background-color: silver;
 }
 
 .navbar > li > a{
   display: block;
   color: white;
-  background-color: black;
-  padding: 1rem;
+  padding: 0;
+  margin-left: 40px;
 }
 
 .navbar ul.navbar {
@@ -132,11 +132,13 @@ content{
 
 .navbar .nav-search {
   text-align: left;
-  margin: 0;
+  margin-right: 40px;
   padding: 0;
 }
 
+
 /* Dynamic Logo */
+
 .dynamic-logo-container {
   display: flex;
   justify-content: center;
@@ -154,14 +156,15 @@ landing-text{
   text-align: center;
 }
 
-.landing-reserve{
 
-}
+/* Section Colours */
 
-
-/* footer */
 #footer{
   background-color:#274C80;
+}
+
+#landing-specials {
+  background-color: #274C80;
 }
 
 
