--- a/css/layout.css
+++ b/css/layout.css
@@ -15,10 +15,6 @@ select, label, fieldset, legend, blockquote, cite {
   outline: 0;
 }
 
-content{
-  max-width:1222px;
-  margin: 0 auto;
-}
 
 .grid-system{
   max-width:1222px;
@@ -60,7 +56,7 @@ content{
   grid-column-end: 9;
 }
 
-#whole-width-text {
+#landing-header {
   grid-column-start: 1;
   grid-column-end: 9;
   text-align: center;
@@ -106,7 +102,6 @@ content{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 102px;
     padding: 0;
     background-color: silver;
 }
@@ -126,7 +121,8 @@ content{
 
 .navbar .nav-logo {
   text-align: center;
-  margin: 0;
+  margin-top: 32px;
+  margin-bottom: 24px;
   padding: 0;
 }
 
@@ -142,10 +138,6 @@ content{
 .dynamic-logo-container {
   display: flex;
   justify-content: center;
-}
-
-#landing-header{
-  position: relative;
 }
 
 landing-text{
@@ -168,13 +160,42 @@ landing-text{
 }
 
 
+/* Footer */
 
+#footer-1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+#footer-2 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+}
+
+#footer-3 {
+  grid-column-start: 4;
+  grid-column-end: 6;
+}
+
+#footer-4 {
+  grid-column-start: 6;
+  grid-column-end: 7;
+}
+
+#footer-5 {
+  grid-column-start: 7;
+  grid-column-end: 9;
+}
 
 /* Colors of sections just for referencing purpose */
 
 body {
   background-color: lightblue;
 }
+
+#landing-socialmedia {
+  background-color: #EFEFEF;
+} 
 
 /* Container */
 
