--- a/css/button.css
+++ b/css/button.css
@@ -81,6 +81,10 @@
     display: block;
     margin: 0 auto;
 }
+#about-reserve-button{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
 .menu-button {
     width: 100%;
