--- a/css/layout.css
+++ b/css/layout.css
@@ -80,11 +80,6 @@ select, label, fieldset, legend, blockquote, cite {
   text-align: center;
 }
 
-.page-description{
-  grid-column-start: 1;
-  grid-column-end: 9;
-}
-
 
 /* Item Grids - 2 columns per item */
 
@@ -196,8 +191,6 @@ select, label, fieldset, legend, blockquote, cite {
 }
 
 
-
-
 /* Dynamic Logo */
 
 .dynamic-logo-container {
@@ -262,22 +255,15 @@ body {
   background-color: #EFEFEF;
 } 
 
-/* Container */
 
-.container {
-  text-align: center;
+/* Text Layouts */
+h2 {
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
 
-.container img {
-  display: inline-block;
-  max-width: 100%;
+.whole-width-text {
+  grid-column-start: 1;
+  grid-column-end: 9;
 }
-h2{
-  font-family: 'Cresci LP';
-  font-size: 28px;
-}
-.image-container {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-}
+
