--- a/css/spacing.css
+++ b/css/spacing.css
@@ -1,19 +1,4 @@
-/* Landing Page Spacings */
-
-.dynamic-logo {
-    margin-top: 60px;
-    margin-bottom: 12px;
-}
-
-h2 {
-    margin-bottom: 16px;
-}
-
-#landing-header {
-    margin-bottom: 12px;
-    padding: 0;
-}
-
+/* Generic food spacings */
 .food-image {
     padding: 0px;
     margin: 0px;
@@ -27,6 +12,17 @@ h2 {
 
 .food-description {
     text-align:center;
+}
+
+/* Landing spacings*/
+.dynamic-logo {
+    margin-top: 60px;
+    margin-bottom: 12px;
+}
+
+#landing-header {
+    margin-bottom: 12px;
+    padding: 0;
 }
 
 .landing-menu-buttom {
@@ -66,6 +62,8 @@ h2 {
     padding: 0px;
 }
 
+
+/* Footer spacings*/
 #footer{
     padding-top: 60px;
     padding-bottom: 20px;
@@ -95,3 +93,6 @@ h2 {
 .footer-copyright {
     padding-top: 20px;
 }
+
+/* Text spacings */
+
