--- a/css/layout.css
+++ b/css/layout.css
@@ -16,6 +16,7 @@ select, label, fieldset, legend, blockquote, cite {
 .grid-system{
   max-width:1222px;
   margin: 0 auto;
+  padding: 0 auto;
   display: grid;
   grid-template-columns: repeat(8, 138px);
   gap: 16px;
@@ -132,8 +133,6 @@ select, label, fieldset, legend, blockquote, cite {
   padding-right: 40px;
   padding-top: 28px;
   padding-bottom: 24px;
-  background-color: silver; /* temporary */
-
 }
 
 .navbar {
@@ -217,6 +216,10 @@ landing-text{
   background-color: #274C80;
 }
 
+#landing-socialmedia {
+  background-color: #EFEFEF;
+} 
+
 
 /* Footer */
 
@@ -245,16 +248,6 @@ landing-text{
   grid-column-end: 9;
 }
 
-/* Colors of sections just for referencing purpose */
-
-body {
-  background-color: lightblue;
-}
-
-#landing-socialmedia {
-  background-color: #EFEFEF;
-} 
-
 
 /* Text Layouts */
 h2 {
@@ -267,3 +260,13 @@ h2 {
   grid-column-end: 9;
 }
 
+
+/* Colors of sections just for referencing purpose*/
+
+body {
+  background-color: lightblue;
+}
+
+.navbar-main {
+  background-color: silver; /* temporary */
+}
