--- a/css/fonts.css
+++ b/css/fonts.css
@@ -85,7 +85,6 @@ h3 {
 }
 
 .drink-item dt{
-  text-decoration: none;
   font-style: normal;
   color: black;
   font-family: "givonic-semibold", Arial, sans-serif;
@@ -93,7 +92,7 @@ h3 {
   font-kerning: -20px;
 }
 
-.drink-item dd{
+.drink-price{
   text-decoration: none;
   font-style: normal;
   color: black;
@@ -165,7 +164,7 @@ p {
     font-kerning: -20px;
 }
 
-.drink-item dd.description {
+.drink-item dd {
   text-decoration: none;
   font-style: normal;
   color: black;
@@ -205,12 +204,21 @@ ul {
 }
 
 .footer-copyright {
-  text-decoration: none;
+    text-decoration: none;
     font-style: normal;
     color: white;
     font-family: "givonic-light", Arial, sans-serif;
     font-size: 16px;
     font-kerning: -20px;
+}
+
+.in-page-menu {
+  text-decoration: none;
+  font-style: normal;
+  color: black;
+  font-family: 'cresci', 'Times New Roman', serif;
+  font-size: 23px;
+  font-kerning: -20px;
 }
 
 
