--- a/css/spacing.css
+++ b/css/spacing.css
@@ -15,7 +15,7 @@
 }
 
 
-/* Landing spacings*/
+/* Landing spacings */
 .dynamic-logo {
     margin-top: 60px;
     margin-bottom: 12px;
@@ -63,8 +63,43 @@
     padding: 0px;
 }
 
+/* Drinks spacings */
+#drinks-header {
+    padding: 0;
+    margin-bottom: 12px;
+}
 
-/*Abouts spacings*/
+#in-page-nav {
+    padding-top: 20px;
+    padding-bottom: 44px;
+}
+
+#sparkling {
+    padding-bottom: 60px;
+}
+
+#white {
+    padding-bottom: 60px;
+}
+
+#cocktails {
+    padding-bottom: 60px;
+}
+
+#soft {
+    padding-bottom: 80px;
+}
+
+.drink-item {
+    margin-bottom: 12px;
+}
+
+.drink-price {
+    margin-bottom: 20px;
+}
+
+
+/* Abouts spacings */
 .abouts-intro {
     padding-top: 20px;
     padding-bottom: 16px;
@@ -86,7 +121,8 @@
     padding-bottom: 40px;
 }
 
-/*Footer spacings*/
+
+/* Footer spacings */
 #footer{
     padding-top: 60px;
     padding-bottom: 20px;
