--- a/css/layout.css
+++ b/css/layout.css
@@ -63,12 +63,6 @@ select, label, fieldset, legend, blockquote, cite {
   grid-column-end: 9;
 }
 
-#landing-header {
-  grid-column-start: 1;
-  grid-column-end: 9;
-  text-align: center;
-}
-
 #page-header {
   grid-column-start: 1;
   grid-column-end: 9;
@@ -132,6 +126,11 @@ select, label, fieldset, legend, blockquote, cite {
   padding-right: 40px;
   padding-top: 28px;
   padding-bottom: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  z-index: 2;
 }
 
 .navbar {
@@ -184,6 +183,37 @@ select, label, fieldset, legend, blockquote, cite {
 
 .in-page-menu {
   margin-right: 20px;
+}
+
+
+/* landing page */
+
+#landing-top {
+  position: relative;
+}
+
+.landing-head-container{
+  position: relative;
+}
+
+.landing-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  color: #fff;
+  font-size: 24px;
+  text-align: center;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+.landing-reserve {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
 }
 
 
@@ -333,5 +363,5 @@ body {
 }
 
 .navbar-main {
-  background-color: silver; /* temporary */
+  background-color: transparent;
 }
