--- a/css/spacing.css
+++ b/css/spacing.css
@@ -1,4 +1,4 @@
-/* Generic food spacings */
+/* generic food item spacings */
 .food-image {
     padding: 0px;
     margin: 0px;
@@ -14,54 +14,6 @@
     text-align:center;
 }
 
-
-/* Landing spacings */
-.dynamic-logo {
-    margin-top: 60px;
-    margin-bottom: 12px;
-}
-
-#landing-header {
-    margin-bottom: 12px;
-    padding: 0;
-}
-
-.landing-menu-buttom {
-    margin-top: 20px;
-}
-
-#landing-specials {
-    padding-bottom: 40px;
-  }
-
-#landing-philosophy {
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-#landing-recommendations {
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-#landing-socialmedia {
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-.social-media-image {
-    margin-bottom: 40px;
-}
-
-#landing-map {
-    padding-top: 40px;
-    padding-bottom: 80px;
-}
-
-.map {
-    margin: 0px;
-    padding: 0px;
-}
 
 /* Drinks spacings */
 #drinks-header {
@@ -97,6 +49,7 @@
 .drink-price {
     margin-bottom: 20px;
 }
+
 
 /* food menu spacings */
 #food-header {
